可以注册登录

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,6 +73,14 @@ a {
     position: static;
 }
 
+.err-msg {
+    text-shadow: 1px -1px 1px rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
+    padding: 4px;
+    background-color: #ffc;
+    border: orange solid 2px;
+}
+
 #header-left {
     position: relative;
     float: left;
