--- a/views/index.html
+++ b/views/index.html
@@ -140,3 +140,6 @@
   </div>
 </div>
 <!-- wrapper:end -->
+
+<script src="/javascripts/jquery-1.7.1.min.js"></script>
+<script src="/javascripts/main.js"></script>
