--- a/views/reg-login.html
+++ b/views/reg-login.html
@@ -12,25 +12,35 @@
 <!-- header:end -->
 
 <div id="wrapper">
-  <div class="form-box" id="register-div">
-    <form action="" method="post">
+  <div class="form-box" id="register-div"
+    <% if (login) { %>
+    style="display: none;"
+    <% } %>
+    >
+    <form action="/register" method="post">
       <h1>注册</h1>
-      <input type="text" placeholder="邮箱" class="form-input" id="email"/>
-      <input type="text" placeholder="账户名" class="form-input" id="account"/>
-      <input type="password" placeholder="密码" class="form-input" id="password"/>
-      <input type="password" placeholder="输入多一次密码" class="form-input" />
+      <%- partial('template/errmsg') %>
+      <input type="text" placeholder="邮箱" class="form-input" name="email" value=""/>
+      <input type="text" placeholder="账户名" class="form-input" name="name" value=""/>
+      <input type="password" placeholder="密码" class="form-input" name="password"/>
+      <input type="password" placeholder="输入多一次密码" class="form-input" name="rePassword"/>
       <input type="submit" class="submit_btn" name="" value="提交注册">
     </form>
   </div>
-  <div class="form-box" id="login-div" style="display: none;">
-    <form action="" method="post">
+  <div class="form-box" id="login-div"
+    <% if (!login) { %>
+      style="display: none;"
+      <% } %>
+    >
+    <form action="/login" method="post">
       <h1>登录</h1>
-      <input type="text" placeholder="邮箱/账户名" class="form-input" id="emailoraccount"/>
-      <input type="password" placeholder="密码" class="form-input" id="password"/>
+      <%- partial('template/errmsg') %>
+      <input type="text" placeholder="邮箱/账户名" class="form-input" id="name" name="name"/>
+      <input type="password" placeholder="密码" class="form-input" id="password" name="password"/>
       <input type="submit" class="submit_btn" name="" value="登录进来">
     </form>
   </div>
-  <%
-    locals.register
-  %>
 </div>
+
+<script src="/javascripts/jquery-1.7.1.min.js"></script>
+<script src="/javascripts/main.js"></script>
