--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,3 @@
-
 <!-- header:start -->
 <div id="header">
   <div id="header-wrap">
@@ -7,12 +6,12 @@
     </div>
     <div id="header-right">
       <div id="control-search" class="btn">
-        <input type="text" placeholder="搜索联系人"/>
+        <label><input type="text" placeholder="搜索联系人"/></label>
       </div>
-      <div id="control-message" class="btn homeImg" title="新消息">
+      <div id="control-message" class="btn homeImg" title="<%=locals.current_account%>">
       </div>
-      <div id="control-face" class="btn homeImg" title="用户名字">
-        <img src="/images/0f7d38fafe9b3ad12797be84d2c8e943">
+      <div id="control-face" class="btn homeImg" title="< locals.account.name%>">
+        <!--<img src="<= locals.current_account.photo_path%>">-->
       </div>
     </div>
   </div>
