--- a/views/layout.html
+++ b/views/layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="utf-8">
-  <link rel="Shortcut Icon" href="https://i.doit.im/public/favicon.ico">
+  <link rel="Shortcut Icon" href="http://airsen.info/wp-content/uploads/2011/12/favicon.ico">
   <title>
     <%= config.title.main + (locals.title || '') %>
   </title>
