目前版本没有调试问题

--- a/views/index.html
+++ b/views/index.html
@@ -8,9 +8,9 @@
       <div id="control-search" class="btn">
         <label><input type="text" placeholder="搜索联系人"/></label>
       </div>
-      <div id="control-message" class="btn homeImg" title="<%=locals.current_account%>">
+      <div id="control-message" class="btn homeImg" title="<%=locals.account_id%>">
       </div>
-      <div id="control-face" class="btn homeImg" title="< locals.account.name%>">
+      <div id="control-face" class="btn homeImg" title="<=locals.account.name%>">
         <!--<img src="<= locals.current_account.photo_path%>">-->
       </div>
     </div>
