--- a/views/reg-login.html
+++ b/views/reg-login.html
@@ -43,4 +43,4 @@
 </div>
 
 <script src="/javascripts/jquery-1.7.2.min.js"></script>
-<script src="/javascripts/main.js"></script>
+<script src="/javascripts/reg-login.js"></script>
