--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -183,6 +183,25 @@ a {
     height: 100%;
 }
 
+#message {
+    border:#ff0000 solid 2px;
+    position: absolute;
+    font-size: 16px;
+    right: 20px;
+    bottom: 20px;
+    background: grey;
+    width: 200px;
+    height: 100px;
+    padding: 10px;
+    background: -moz-linear-gradient(top, #FEFEFE 0, #AAA 200%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FEFEFE), color-stop(200%, #AAA));
+    background: -webkit-linear-gradient(top, #FEFEFE 0, #AAA 200%);
+    background: -o-linear-gradient(top, #FEFEFE 0, #AAA 200%);
+    background: -ms-linear-gradient(top, #FEFEFE 0, #AAA 200%);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+}
+
 .group h3 {
     height: 22px;
     line-height: 22px;
@@ -297,7 +316,6 @@ a {
 }
 
 .contact-box {
-    padding: 10px;
     width: 250px;
     height: 100px;
     float: left;
