--- a/views/reg-login.html
+++ b/views/reg-login.html
@@ -42,5 +42,5 @@
   </div>
 </div>
 
-<script src="/javascripts/jquery-1.7.2.min.js"></script>
+<script src="/javascripts/jquery/jquery-1.7.2.min.js"></script>
 <script src="/javascripts/reg-login.js"></script>
