--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
   <div id="header-wrap">
     <div id="header-left" title="<%= config.app.name %>">
       <img height="32px" width="32px" class="btn" src="/favicon.png"/>
+
       <h1 style="color: #ffffff;width:300px;margin-top: 10px">空中电话本</h1>
     </div>
     <div id="header-right">
@@ -58,35 +59,35 @@
       </div>
       <!--<div class="sep"></div>-->
       <!--<div class="group">-->
-        <!--<h3>联系人分组</h3>-->
-        <!--<ul>-->
-          <!--<li class="item">-->
-            <!--<i class="item-icon"></i>-->
-            <!--<span class="">家人</span>-->
-          <!--</li>-->
-          <!--<li class="item">-->
-            <!--<i class="item-icon"></i>-->
-            <!--<span class="">同事</span>-->
-          <!--</li>-->
-          <!--<li class="item">-->
-            <!--<i class="item-icon"></i>-->
-            <!--<span class="">同学</span>-->
-          <!--</li>-->
-        <!--</ul>-->
+      <!--<h3>联系人分组</h3>-->
+      <!--<ul>-->
+      <!--<li class="item">-->
+      <!--<i class="item-icon"></i>-->
+      <!--<span class="">家人</span>-->
+      <!--</li>-->
+      <!--<li class="item">-->
+      <!--<i class="item-icon"></i>-->
+      <!--<span class="">同事</span>-->
+      <!--</li>-->
+      <!--<li class="item">-->
+      <!--<i class="item-icon"></i>-->
+      <!--<span class="">同学</span>-->
+      <!--</li>-->
+      <!--</ul>-->
       <!--</div>-->
       <!--<div class="sep"></div>-->
       <!--<div class="group">-->
-        <!--<h3>备份还原</h3>-->
-        <!--<ul>-->
-          <!--<li class="item">-->
-            <!--<i class="item-icon"></i>-->
-            <!--<span class="">备份</span>-->
-          <!--</li>-->
-          <!--<li class="item">-->
-            <!--<i class="item-icon"></i>-->
-            <!--<span class="">还原</span>-->
-          <!--</li>-->
-        <!--</ul>-->
+      <!--<h3>备份还原</h3>-->
+      <!--<ul>-->
+      <!--<li class="item">-->
+      <!--<i class="item-icon"></i>-->
+      <!--<span class="">备份</span>-->
+      <!--</li>-->
+      <!--<li class="item">-->
+      <!--<i class="item-icon"></i>-->
+      <!--<span class="">还原</span>-->
+      <!--</li>-->
+      <!--</ul>-->
       <!--</div>-->
       <div class="sep"></div>
       <div class="group">
@@ -137,6 +138,9 @@
   <div id="resizable-handler"></div>
 
   <div id="main">
+    <div id="profile-manager" style="display: none;">
+
+    </div>
     <div id="contact-men" class="tab">
       <div class="toolbar">
         <div id="add-contact" class="btn homeImg" title="添加选中的联系人">
