--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -168,7 +168,7 @@ a {
     overflow-y: hidden;
 }
 
-#sidebar {
+#siderbar {
     width: 200px;
     float: left;
     background: #E9EEF5;
@@ -176,7 +176,7 @@ a {
     height: 100% !important;
 }
 
-#sidebar-in {
+#siderbar-in {
     min-height: 110px;
     overflow-y: auto;
     overflow-x: hidden;
@@ -256,7 +256,7 @@ a {
     margin: 2px 10px;
 }
 
-#sidebar-fix {
+#siderbar-fix {
     left: 0;
     bottom: 0;
     background: #fff;
@@ -414,4 +414,8 @@ a {
 
 #remove-contact:hover {
     background-position: -99px -681px;
+}
+
+.display-none {
+    display: none;
 }
