--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
           </li>
           <li class="item forward" title="我的通讯录中的联系人">
             <i class="item-icon"></i>
-            <span class="">我的联系人</span>
+            <span class="">已归档联系人</span>
           </li>
           <li class="item forward" title="我的通讯录中的联系人" id="random-results">
             <i class="item-icon"></i>
@@ -128,7 +128,7 @@
           </li>
           <li class="item">
             <i class="item-icon"></i>
-            <span class="">同步策略</span>
+            <span class="">备份</span>
           </li>
         </ul>
       </div>
