随便看看和查看我的联系人

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -447,3 +447,6 @@ a {
 .card-phone {
     font: bold 14px sans-serif;
 }
+
+/**** Clearfix ****/
+ .clearfix:after { content: ""; display: table;clear: both; }
